--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,12 @@
 {
   "name": "backend",
+  "type": "module",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node ./server.js",
+    "migrate": "ts-node ./db/migrate.js"
   },
   "keywords": [],
   "author": "",
