--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node ./server.js",
+    "start": "ts-node index",
     "migrate": "ts-node ./db/migrate.js"
   },
   "keywords": [],
