--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node index",
-    "migrate": "ts-node ./db/migrate.js"
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev:build": "tsc --watch",
+    "dev:serve": "nodemon dist/index.js",
+    "dev": "concurrently \"npm run dev:build\" \"npm run dev:serve\"",
+    "migrate": "node ./db/migrate.js",
+    "seed": "node ./db/seed.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +20,14 @@
   "dependencies": {
     "better-sqlite3": "^12.5.0",
     "cors": "^2.8.5",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "uuid": "^13.0.0"
+  },
+  "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
+    "concurrently": "^9.2.1",
+    "nodemon": "^3.1.11"
   }
 }
